--- a/ads-application/src/main/resources/application.properties
+++ b/ads-application/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.datasource.password=${DATABASE_PASSWORD:root}
 spring.datasource.url=jdbc:mysql://${DATABASE_DOMAIN:localhost}:${DATABASE_PORT:3306}/${DATABASE_SCHEMA:jpa_ads_app}?createDatabaseIfNotExist=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+spring.datasource.initialization-mode=always
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
