CRUD for Ad entity implemented

--- a/ads-application/src/main/resources/application.properties
+++ b/ads-application/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 
+image.path=${IMAGE_PATH:C:\\ads-app\\images\\}
+
