--- a/ads-application/pom.xml
+++ b/ads-application/pom.xml
@@ -47,10 +47,10 @@
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
 
-        <!--<dependency>
-            <groupId>org.springframework.boot</groupId> Spring-security-core, Spring-security-config, Spring-security-web
+        <dependency>
+            <groupId>org.springframework.boot</groupId> <!--Spring-security-core, Spring-security-config, Spring-security-web-->
             <artifactId>spring-boot-starter-security</artifactId>
-        </dependency>-->
+        </dependency>
 
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
