--- a/ads-application-frontend/package.json
+++ b/ads-application-frontend/package.json
@@ -9,10 +9,12 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
     "formik": "^2.2.9",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
+    "react-router-guards": "^1.0.2",
     "react-scripts": "4.0.3",
     "react-toastify": "^7.0.4",
     "web-vitals": "^1.1.2",
